# lineprofiler

./: LICENSE  README.md  pyproject.toml
lineprofiler/: __init__.py  profiler.py
