[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lineprofiler"
version = "0.1.0"
description = "Context-manager based line-by-line profiler for Python functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "mathematiger", email = "mcop.dkoehler@gmail.com" }
]
keywords = ["profiler", "profiling", "performance", "timing", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mathematiger/lineprofiler"
Repository = "https://github.com/mathematiger/lineprofiler"
Issues = "https://github.com/mathematiger/lineprofiler/issues"

[tool.hatch.build.targets.wheel]
packages = ["lineprofiler"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
